@startuml
skinparam classAttributeIconSize 0

interface Action {
    +execute(user : Combatant, targets : List<Combatant>) : void
    +getName() : String
}

interface PlayerAction {
    +execute(user : Player, targets : List<Combatant>) : void
}

abstract class AbstractAction {
    -name : String
    +getName() : String
}

class BasicAttack {
    +execute(user : Combatant, targets : List<Combatant>) : void
}

class Defend {
    +execute(user : Combatant, targets : List<Combatant>) : void
}

class ItemAction {
    -item : Item
    +ItemAction(item : Item)
    +execute(user : Player, targets : List<Combatant>) : void
}

class SpecialSkill {
    +execute(user : Player, targets : List<Combatant>) : void
}

Action <|.. AbstractAction
PlayerAction --|> Action
AbstractAction <|-- BasicAttack
AbstractAction <|-- Defend
AbstractAction <|-- ItemAction
AbstractAction <|-- SpecialSkill
PlayerAction <|.. ItemAction
PlayerAction <|.. SpecialSkill
@enduml
